--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.2",
+    "aws-sdk": "^2.1367.0",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
