--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nock": "^13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
